<resources>
    <string name="app_name">Quiz App</string>
    <string name="Version">Version 1.0</string>
    <string name="q2">Q2. 9 * 2 =</string>
    <string name="Introduction">ELEMENTARY MATHS TEST</string>
    <string name="Instruction">Instruction: Click an option from the list</string>
    <string name="q1">Q1. 2 + 2 =</string>
    <string name="opt1A">4</string>
    <string name="opt1B">22</string>
    <string name="opt1C">44</string>
    <string name="opt1D">0</string>
    <string name="opt2A">92</string>
    <string name="opt2B">11</string>
    <string name="opt2C">29</string>
    <string name="opt2D">18</string>
    <string name="q3">Q3. 9 + 9 =</string>
    <string name="opt3A">99</string>
    <string name="opt3B">69</string>
    <string name="opt3C">18</string>
    <string name="opt3D">81</string>
    <string name="q4">Q4. 5 + 5 =</string>
    <string name="opt4A">50</string>
    <string name="opt4B">10</string>
    <string name="opt4C">56</string>
    <string name="opt4D">65</string>
    <string name="submit">Submit</string>
    <string name="reset">Reset</string>
</resources>
