<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/background_color"
        android:textColor="#000000"
        tools:context=".MainActivity">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:paddingLeft="24dp"
            android:textColor="#000000"
            android:text="@string/Introduction"
            android:textSize="24dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:background="@android:color/darker_gray" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:paddingLeft="24dp"
            android:textColor="#000000"
            android:text="@string/Instruction"
            android:textSize="24dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:background="@android:color/darker_gray" />

        <TextView
            android:id="@+id/question1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#000000"

            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:paddingLeft="24dp"
            android:text="@string/q1"
            android:textSize="24dp" />

        <RadioGroup
            android:id="@+id/Q1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:textColor="#000000" >

            <RadioButton
                android:id="@+id/option_1A"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked_Q1"
                android:paddingLeft="24dp"
                android:text="@string/opt1A"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/option_1B"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked_Q1"
                android:paddingLeft="24dp"
                android:text="@string/opt1B"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/option_1C"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked_Q1"
                android:paddingLeft="24dp"
                android:text="@string/opt1C"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/option_1D"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked_Q1"
                android:paddingLeft="24dp"
                android:text="@string/opt1D"
                android:textSize="16sp" />
        </RadioGroup>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:background="@android:color/darker_gray" />

        <TextView
            android:id="@+id/question2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000000"

            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:paddingLeft="24dp"
            android:text="@string/q2"
            android:textSize="24sp" />

        <RadioGroup
            android:id="@+id/Q2"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/option_2A"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked_Q2"
                android:paddingLeft="24dp"
                android:text="@string/opt2A"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/option_2B"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked_Q2"
                android:paddingLeft="24dp"
                android:text="@string/opt2B"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/option_2C"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked_Q2"
                android:paddingLeft="24dp"
                android:text="@string/opt2C"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/option_2D"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked_Q2"
                android:paddingLeft="24dp"
                android:text="@string/opt2D"
                android:textSize="16sp" />
        </RadioGroup>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:background="@android:color/darker_gray" />

        <TextView
            android:id="@+id/question3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000000"

            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:paddingStart="24dp"
            android:text="@string/q3"
            android:textSize="24dp" />

        <RadioGroup
            android:id="@+id/Q3"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/option_3A"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked_Q3"
                android:paddingLeft="24dp"
                android:text="@string/opt3A"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/option_3B"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked_Q3"
                android:paddingLeft="24dp"
                android:text="@string/opt3B"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/option_3C"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked_Q3"
                android:paddingLeft="24dp"
                android:text="@string/opt3C"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/option_3D"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked_Q3"
                android:paddingLeft="24dp"
                android:text="@string/opt3D"
                android:textSize="16sp" />
        </RadioGroup>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:background="@android:color/darker_gray" />

        <TextView
            android:id="@+id/question4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000000"

            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:paddingLeft="24dp"
            android:text="@string/q4"
            android:textSize="24dp" />

        <RadioGroup
            android:id="@+id/Q4"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/option_4A"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked_Q4"
                android:paddingLeft="24dp"
                android:text="@string/opt4A"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/option_4B"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked_Q4"
                android:paddingLeft="24dp"
                android:text="@string/opt4B"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/option_4C"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked_Q4"
                android:paddingLeft="24dp"
                android:text="@string/opt4C"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/option_4D"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked_Q4"
                android:paddingLeft="24dp"
                android:text="@string/opt4D"
                android:textSize="16sp" />
        </RadioGroup>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:background="@android:color/darker_gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/submit"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_margin="24dp"
                android:layout_marginTop="16dp"
                android:onClick="submitAnswers"
                android:text="@string/submit"
                android:textAllCaps="true"
                android:textColor="@color/colorAccent" />


            <Button
                android:id="@+id/reset"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_margin="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="24dp"
                android:onClick="resetAnswers"
                android:text="@string/reset"
                android:textAllCaps="true"
                android:textColor="@color/colorAccent" />


        </LinearLayout>




        <TextView
            android:id="@+id/total_score"
            android:textSize="42dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:textColor="#000000"

            android:text="" />

    </LinearLayout>





</ScrollView>